# parcial-computer-vision

./: CMakeLists.txt  Makefile  output.txt
.kiro/specs/coin-denomination-labeling/: design.md  requirements.md  tasks.md
src/: main.cpp
